Fixed some alignment to my webpage. Added some borders

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -24,7 +24,7 @@ h1 {
     color: black;
     font-size: 45px;
     text-align: center;
-    padding: 30px;
+    /* padding: 30px; */
 }
 
 h2 {
@@ -36,6 +36,10 @@ p {
     color: black;
     font-size: 20px;
     text-align: center;
+    margin: 50px;
+    border: solid;
+    border-radius: 5px;
+
 }
 
 ul {
@@ -77,7 +81,7 @@ li:first-child {
 }
 
 .linq {
-    color: black;
+    color:white;
 }
 
 .projList {
@@ -86,7 +90,6 @@ li:first-child {
 
 #content {
     color: black;
-    margin: 50px;
     grid-area: content;
 }
 
@@ -163,7 +166,7 @@ img {
     grid-area: footer;
     display: flex;
     justify-content: center;
-    color: black;
+    background-color: black; 
 }
 
 #navigation>ul {
